# Memristor-NN-Simulator

./: .gitignore  .pre-commit-config.yaml  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE_REPORT.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.json  AUTONOMOUS_SDLC_FINAL_COMPLETION.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUCCESS.md  AUTONOMOUS_SDLC_FINAL_SUCCESS_REPORT.md  AUTONOMOUS_SDLC_GENERATION_4_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUCCESS_SUMMARY.md  AUTONOMOUS_SDLC_SUMMARY.md  CHANGELOG.md  CI_CD_TEMPLATE.yml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_EXECUTION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  PUBLICATION_READY_PAPER.md  README.md  README_PIPELINE_GUARD.md  RESEARCH_PAPER_DRAFT.md  SECURITY.md  SETUP_CI_CD.md  autonomous_quality_gates.py  autonomous_sdlc_orchestrator.py  benchmark_results.json  benchmark_validation.py  comprehensive_quality_gates.py  comprehensive_quality_gates_results.json  comprehensive_test_report.json  comprehensive_test_suite.py  debug_failure_detector.py  deploy_production.py  deploy_production_clean.py  (+62 more)
.github/workflows/: ci.yml
cache/: cache.db
deployment/: .dockerignore  .env.template  Dockerfile  README.md  deploy.sh  deployment_readiness_report.json  k8s-development.yaml  k8s-production.yaml  k8s-staging.yaml  production_deployment_complete.py
deployment/monitoring/: alert_rules.yml  prometheus.yml
deployment/scripts/: deploy.sh  health_check.sh  rollback.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
deployment_artifacts/: docker_config.json  i18n_config.json  kubernetes_manifests.json  monitoring_config.json  security_config.json  terraform_config.json
examples/: basic_usage.py  complete_workflow.py  demo_mlp.py
logs/: generation2_robustness_report.json  generation3_scaling_report.json
logs/global/: global_deployment_report.json  global_first_report.json
logs/quality/: comprehensive_quality_report.json  io_test.json
logs/research/: comprehensive_research_documentation.json  final_research_summary.json  publication_artifact.json  publication_draft.md
memristor_nn/: __init__.py  crossbar.py  device.py  energy.py  layers.py  network.py
memristor_nn/analysis/: __init__.py  explorer.py
memristor_nn/core/: __init__.py  crossbar.py  device_models.py
memristor_nn/faults/: __init__.py  analyzer.py
memristor_nn/mapping/: __init__.py  neural_mapper.py
memristor_nn/observability/: __init__.py  metrics_collector.py
memristor_nn/optimization/: __init__.py  adaptive_performance_engine.py  cache_manager.py  memory_optimizer.py  parallel_simulator.py  performance_profiler.py  scaling_manager.py  self_improving_optimizer.py
memristor_nn/quality/: __init__.py  progressive_gates.py
memristor_nn/reliability/: __init__.py  fault_tolerance.py  reliability_analyzer.py
memristor_nn/research/: advanced_algorithms.py  benchmark_suite.py  novel_algorithms.py
pipeline_guard/: __init__.py
tests/: test_basic_functionality.py  test_crossbar.py  test_device.py  test_energy.py  test_error_handling.py  test_layers.py  test_network.py  test_pipeline_guard.py
(+42 files in other folders)
