[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memristor-nn-sim"
version = "0.1.0"
description = "Device-accurate simulator and RTL generator for memristive crossbar accelerators"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Daniel Schmidt", email = "daniel@terragonlabs.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
rtl = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/photonic-mlir-synth-bridge"
Documentation = "https://memristor-nn-sim.readthedocs.io"
Repository = "https://github.com/danieleschmidt/photonic-mlir-synth-bridge"
Issues = "https://github.com/danieleschmidt/photonic-mlir-synth-bridge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memristor_nn*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=memristor_nn --cov-report=term-missing --cov-fail-under=85"